--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/CMSIS/Device/ST/STM32F4"]
 	path = vendor/CMSIS/Device/ST/STM32F4
 	url = https://github.com/STMicroelectronics/cmsis_device_f4
+[submodule "Vendor/CMSIS/Device/ST/STM32F4"]
+	path = Vendor/CMSIS/Device/ST/STM32F4
+	url = https://github.com/STMicroelectronics/cmsis_device_f4.git
