--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(blink VERSION 1.0)
 
 # GCC ARM compiler flags
 set(CMAKE_C_COMPILER arm-none-eabi-gcc)
-set(CMAKE_C_FLAGS "-mcpu=cortex-m4 -mthumb -nostdlib -DSTM32F446xx -Wl,-Map=${PROJECT_NAME}.map")
+set(CMAKE_C_FLAGS "-g -mcpu=cortex-m4 -mthumb -nostdlib -DSTM32F446xx -Wl,-Map=${PROJECT_NAME}.map")
 
 # Linker options
 set(LINKER_SCRIPT "linker_script.ld")
@@ -28,5 +28,11 @@ set(PROGRAMMER_FLAGS -f interface/stlink.cfg -f target/stm32f4x.cfg)
 add_custom_target(flash
     COMMAND ${PROGRAMMER} ${PROGRAMMER_FLAGS} -c "program ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.elf verify reset exit"
     DEPENDS ${PROJECT_NAME}.elf
-    COMMENT "Flashing the microcontroller"
+    COMMENT "Flashing the chip"
+)
+
+add_custom_target(debug
+    COMMAND ${PROGRAMMER} ${PROGRAMMER_FLAGS}
+    DEPENDS ${PROJECT_NAME}.elf
+    COMMENT "Debugging the chip"
 )
