--- a/Projects/adc_dac_example/CMakeLists.txt
+++ b/Projects/adc_dac_example/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
-project(blink VERSION 1.0)
+project(exec VERSION 1.0)
+
+# Set to the corresponding driver folder
+set(VENDOR "../../Vendor")
 
 # GCC ARM compiler flags
 set(CMAKE_C_COMPILER arm-none-eabi-gcc)
@@ -12,16 +15,16 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ${LINKER_SCRIPT}")
 # Needed to make clangd functional
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(${PROJECT_NAME}.elf main.c startup.c Vendor/CMSIS/Device/ST/STM32F4/Source/Templates/system_stm32f4xx.c)
+add_executable(${PROJECT_NAME}.elf main.c startup.c ${VENDOR}/CMSIS/Device/ST/STM32F4/Source/Templates/system_stm32f4xx.c)
 
 target_include_directories(${PROJECT_NAME}.elf PUBLIC
-                           "${PROJECT_BINARY_DIR}/Vendor/CMSIS/CMSIS/Core/Include/"
-                           "${PROJECT_BINARY_DIR}/Vendor/CMSIS/Device/ST/STM32F4/Include/"
+                           "${VENDOR}/CMSIS/CMSIS/Core/Include/"
+                           "${VENDOR}/CMSIS/Device/ST/STM32F4/Include/"
                            )
 
 set_target_properties(${TARGET_NAME} PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})
 
-# Flashing
+# Flashing procedure
 set(PROGRAMMER openocd)
 set(PROGRAMMER_FLAGS -f interface/stlink.cfg -f target/stm32f4x.cfg)
 
@@ -31,6 +34,7 @@ add_custom_target(flash
     COMMENT "Flashing the chip"
 )
 
+# Debugging procedure
 add_custom_target(debug
     COMMAND ${PROGRAMMER} ${PROGRAMMER_FLAGS}
     DEPENDS ${PROJECT_NAME}.elf
